--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ hr {
     transition:all,ease-in-out,0.5s
 }
 
+#p-link {
+    color:#3dff40;
+}
 li {
     font-size: 15px;
     letter-spacing: normal;
